<resources>
    <string name="app_name">青鸽</string>
    <string name="follow">关注</string>
    <string name="btn_skip">跳过</string>

    <string name="title_activity_launch">LaunchActivity</string>

    <string name="title_activity_user">UserActivity</string>

    <string name="title_activity_message">MessageActivity</string>

    <string name="title_activity_personal">PersonalActivity</string>

    <string name="tab_community">社区</string>

    <string name="tab_message">消息</string>

    <string name="tab_contact">联系人</string>

    <string name="tab_catering">餐饮</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="account">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="name">请输入称呼</string>
    <string name="text_login">登陆</string>
    <string name="text_register">注册</string>

    <string name="text_all_group">所有社团/兴趣群</string>
    <string name="text_all_follow">好友列表</string>
    <string name="input_psw">密码</string>
    <string name="input_group_name">群名称</string>
    <string name="input_desc">简述</string>
    <string name="text_select_group_member">选择添加群成员:</string>
    <string name="dummy_text1">测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测
        试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_text">海马做了这么多年汽车，总共赚的利润也没有16亿。海马董事长景柱 同志“立志造车30年”，最后拯救他的，还是房地产。朴石看了一下，海口的这批房 子是2000年建成，当时的估值为2000元/平米左右，如今至少增值了五六倍。2004年， 海马借壳房地产公司金盘上市，这些房子被海马继承了下来。在宣传中，景柱一直被 描述海汽筹建基地这块红土地”，“几千个日日夜夜的厮守，景柱已与海南的汽车工 业融为一体”。在海马公司的历史记载中，19柱把海南马自达的资产，悄悄转移到了 自己名下。</string>
</resources>
