<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.GroupCreateActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarWithStatusBarSize"
        android:background="@drawable/toolbar_color_theme"
        android:paddingTop="@dimen/statusBarSize"
        app:titleTextAppearance="@style/TextAppearance.Title"
        app:titleTextColor="@color/white" />

    <com.qingge.yangsong.common.widget.PortraitView
        android:id="@+id/portrait"
        android:layout_width="@dimen/len_88"
        android:layout_height="@dimen/len_88"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/len_56"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_add"
        app:civ_fill_color="@color/cyan_100"
        app:civ_border_color="#63C2C2"
        app:civ_border_width="0.5dp" />

    <EditText
        android:id="@+id/et_group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/len_40"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/len_40"
        android:background="@drawable/bord"
        android:gravity="center"
        android:hint="@string/input_group_name"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="@dimen/len_4"
        android:textColor="@color/grey_700"
        android:textColorHint="@color/grey_400"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_group_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/len_40"
        android:layout_marginTop="@dimen/len_10"
        android:layout_marginEnd="@dimen/len_40"
        android:background="@drawable/bord"
        android:gravity="center"
        android:hint="@string/input_desc"
        android:inputType="text"
        android:maxLength="50"
        android:lines="3"
        android:padding="@dimen/len_4"
        android:textColor="@color/grey_700"
        android:textColorHint="@color/grey_400"
        android:textSize="16sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/len_40"
        android:layout_marginTop="@dimen/len_20"
        android:text="@string/text_select_group_member" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>